checker/tests/output/references/ill-typed/unexpected-memory-address-2.stella
ERROR_UNEXPECTED_MEMORY_ADDRESS
